<resources>
    <string name="app_name">建城社区</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!--主页-->
    <string name="main_home_icon_name">主页</string>
    <string name="main_community_icon_name">社区</string>
    <string name="main_my_icon_name">我的</string>
    <string name="main_shop_icon_name">商城</string>
    <!-- 登录 -->
    <string name="login_title">登录</string>
    <string name="login_login">登录</string>
    <string name="login_register">立即注册</string>
    <string name="login_forget_password">忘记密码?</string>
    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_txt">第三方登录</string>
    <string name="register_ensure_register">提交</string>
    <string name="register_request_code">获取验证码</string>
    <string name="register_nickname_text">请输入昵称</string>
    <string name="register_password_text">请输入密码(6-20位数字或字母)</string>
    <string name="register_password_again_text">请再次填写密码</string>

    <string name="cp_located_city">定位城市</string>
    <string name="cp_locating">正在定位…</string>
    <string name="cp_located_failed">定位失败</string>
    <string name="cp_hot_city">热门城市</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="title_activity_lease_centre">LeaseCentreActivity</string>
    <string name="title_activity_feed_back">FeedbackActivity</string>
    <string name="title_activity_seting">SetingActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register2">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="perm_tip">当前应用缺少必要权限。\n请点击"设置"-"权限"-打开所需权限。\n最后点击两次后退按钮，即可返回。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="unable_to_open_camera">Unable to open camera, please check it and try again later.</string>
    <string name="error">Error</string>
    <string name="amount_paid">待付金额:%s</string>
    <string name="paying">支付</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
</resources>
