<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >


    <LinearLayout
        android:id="@+id/ll_main_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="false">

        <ImageView
            android:id="@+id/iv_main_home_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_home_selected"
            />

        <TextView
            android:id="@+id/tv_main_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_home_icon_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_community"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="false"
        >

        <ImageView
            android:id="@+id/iv_main_community_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_community_selected"
            />

        <TextView
            android:id="@+id/tv_main_community"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_community_icon_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_shop"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusableInTouchMode="false"
        android:focusable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_main_shop_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_shop_selected"
            />

        <TextView
            android:id="@+id/tv_main_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_shop_icon_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_my"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:focusableInTouchMode="false"
        android:focusable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_main_my_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/main_my_selected"
            />

        <TextView
            android:id="@+id/tv_main_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_my_icon_name" />
    </LinearLayout>
</LinearLayout>